--- a/style.css
+++ b/style.css
@@ -1,16 +1,22 @@
 /*Estilos para el encabezado*/
 
 header{
-    background-color: #333;
-    color: #fff;
-    padding: 20px;
-    text-align: center;
+    background-image: url("Images/Pacatqui.jpg"); /* Reemplaza "tu_imagen.jpg" con la ruta de tu imagen de fondo */
+    background-size: cover;
+    background-repeat: no-repeat; /* Evita que la imagen de fondo se repita */
+    padding: 100px; /* Añade espaciado interno para que el contenido sea legible */
+    color: white; /* Cambia el color del texto para que sea legible en la imagen de fondo */
+    text-align: center; /* Centra el contenido del encabezado vertical y horizontalmente */
 }
 
 /*Estilos para el titulo dentro del encabezado*/
 header h1{
-    font-size: 36px;
+    font-size: 100px;
     background: #996600;
+}
+header h2{
+    font-size: 50px;
+    background: #aa2200d8;
 }
 
 /*Estilos para el parrafo dentro del encabezado*/
@@ -59,3 +65,16 @@ nav img{
         text-align: center;
         color: white;
     }
+
+.slideshow-container {
+        position: relative;
+        max-width: 800px;
+        margin: 0 auto;
+} 
+.mySlides {
+        display: none;
+}  
+img {
+        width: 100%;
+        height: auto;
+}
